[package]
name = "checkfile"
version = "1.0.0"
edition = "2021"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool that logs the checksum and last 50 lines of each file in a folder."
readme = "README.md"
homepage = "https://github.com/dominikwilkowski/checkfile"
repository = "https://github.com/dominikwilkowski/checkfile"
keywords = ["commandline", "checkfile", "checksum", "tail", "log"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["cargo"] }
exitcode = "1"
rev_buf_reader = "0.3.0"
sha256 = "1"
