[package]
name = "checkfile"
version = "1.3.0"
edition = "2021"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool that logs the checksum and last 50 lines of each file in a folder."
readme = "README.md"
homepage = "https://github.com/dominikwilkowski/checkfile"
repository = "https://github.com/dominikwilkowski/checkfile"
keywords = ["commandline", "checkfile", "checksum", "tail", "log"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4", features = ["cargo"] }
crossterm = "0.27.0"
exitcode = "1"
rev_lines = "0.3.0"
sha256 = "1"
